--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Mary Project</title>
 </head>
 <body class="open-sans-primary">
-    <header>
+    <header class="header">
         <nav>
             <h3><a href="#">Ma<span>r</span>y</a></h3>
             <ul>
@@ -20,9 +20,44 @@
             </ul>
         </nav>
 
+        <section class="banner">
+            <div class="banner-content">
+                <h3>Hi, I  am</h3>
+                <h2>Mary Hardy</h2>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn btn-secondary"><a href="#">Download CV</a></button>
+                <button class="btn btn-secondary"><a href="#">Contact</a></button>
+            </div>
+            <div class="banner-images">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="about">
+            <div class="about-content">
+                <h3 class="primary-header">About Me</h3>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <div class="about-card-content">
+                    <div class="about-card">
+                        <p>Name:</p>
+                        <h6>Mary Hardy </h6>
+                    </div>
+                    <div class="about-card">
+                        <p>Email:</p>
+                        <h6>info@gmail.com</h6>
+                    </div>
+                    <div class="about-card">
+                        <p>Date of birth:</p>
+                        <h6>11 November 1987</h6>
+                    </div>
+                    <div class="about-card">
+                        <p>From:</p>
+                        <h6>Los Angeles, USA</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
