--- a/index.html
+++ b/index.html
@@ -58,6 +58,39 @@
                 </div>
             </div>
         </section>
+
+        <section class="service">
+            <div class="service-container">
+                <h2 class="primary-header">What I do</h2>
+                <p class="service-para">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+                <div class="service-card-content">
+                    <div class="service-card">
+                        <img src="images/icons/js.png" alt="">
+                        <h5>Vanilla JavaScript</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="service-card">
+                        <img src="images/icons/react.png" alt="">
+                        <h5>React</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="service-card">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h5>Node.js</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="service-card">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h5>MongoDB</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
     </main>
     <footer>
 
