--- a/index.html
+++ b/index.html
@@ -87,7 +87,69 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="summary">
+            <div class="summary-container">
+                <h2 class="primary-header summary-tittle">A summary of My Resume</h2>
+
+                <div class="resume">
+                    <!-- .resume-colum*2>h3.resume-colum-tittle+.expreience*3>h3.expreience-tittle+h4.expreience-sub-tittle+p.expreience-description -->
+                    <div class="resume-colum">
+                        <h3 class="resume-colum-tittle">My Education</h3>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Master in Computer Engineering</h3>
+                            <h4 class="expreience-sub-tittle">Harvard University / 2015 - 2017</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Master in Computer Engineering</h3>
+                            <h4 class="expreience-sub-tittle">Harvard University / 2015 - 2017</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Master in Computer Engineering</h3>
+                            <h4 class="expreience-sub-tittle">Harvard University / 2015 - 2017</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>  
+                        <hr>
+                    </div>
+
+                    <div class="resume-colum">
+                        <h3 class="resume-colum-tittle">My Experience</h3>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Sr. Font End Developer</h3>
+                            <h4 class="expreience-sub-tittle">Apple Inc / 2020 - Current</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Sr. Font End Developer</h3>
+                            <h4 class="expreience-sub-tittle">Apple Inc / 2020 - Current</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="expreience">
+                            <h3 class="expreience-tittle">Sr. Font End Developer</h3>
+                            <h4 class="expreience-sub-tittle">Apple Inc / 2020 - Current</h4>
+                            <p class="expreience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn">Download CV</button>
+            </div>
         </section>
 
 
