added a lest commit

--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                             <p class="expreience-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                         </div>
-                        <hr>
-                        
+                        <hr> 
                     </div>
                 </div>
             </div>
@@ -151,11 +150,27 @@
                 <button class="btn">Download CV</button>
             </div>
         </section>
-
-
     </main>
     <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <h3 class="primary-header">Lets Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
 
+                <a href="#"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="#"><img class="icon-image" src="images/icons/twitter.png" alt=""></a>
+                <a href="#"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+            <div class="footer-form">
+                <h3 class="primary-header">Let’s Message me</h3>
+                <form action="#">
+                    <input type="text" name="username" placeholder="Your name"><br>
+                    <input type="email" name="username" placeholder="Your email" required><br>
+                    <textarea name="comment" id="comment" rows="10px" cols="40px" placeholder="Message"></textarea>
+                </form>
+                <input class="btn" type="submit" value="Submit">
+            </div>
+        </div>
     </footer>
     
 </body>
